# grantha-data

./: .bazelrc  .gitignore  .pre-commit-config.yaml  BUILD.bazel  CHANGELOG.md  CLAUDE.md  MEGHAMALA_CONVERSION_SUMMARY.md  MODULE.bazel  README.md  TODO.md  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  setup.py
.analysis_cache/: bRhadAraNyakopaniSat-aSTama-2aecc3f8.json  bRhadAraNyakopaniSat-catur-4345302a.json  bRhadAraNyakopaniSat-paJcama-2fe683d1.json  bRhadAraNyakopaniSat-saptama-f5e36e8d.json  bRhadAraNyakopaniSat-tRtIya-22b81ed8.json  kaThopaniSat-SaSThI-vallI-0a07bc24.json  kaThopaniSat-caturthI-vallI-7ce07c9c.json  kaThopaniSat-dvitIyA-valla-1234224d.json  kaThopaniSat-paJcamI-vallI-be75635e.json  kaThopaniSat-prathamA-vallI-f76c6fdb.json  kaThopaniSat-tRtIyA-vallI-22c00cbf.json  kenopaniSat-f91cc39e.json  muNDakopaniSat-dvitIyama-2-d4d7cfce.json  muNDakopaniSat-dvitIyamu-cd4485ca.json  muNDakopaniSat-prathamamuN-51a488fa.json  muNDakopaniSat-prathamamuNa-2-ff669020.json  muNDakopaniSat-tRtIyamuN-f55b798d.json  muNDakopaniSat-tRtIyamuNa-2-a11747c7.json
.gemini/: GEMINI.md
.github/workflows/: release.yml  test.yml
docs/: RELEASING.md  VERSIONING.md
docs/archive/: HASH_ORDER_BUG_PLAN.md
docs/archive/meghamala_converter/: LOGGING_AND_ERROR_HANDLING.md
formats/: GRANTHA_MARKDOWN.md
formats/schemas/: BUILD  grantha-envelope.schema.json  grantha-part.schema.json  grantha.schema.json
json/upanishads/kausitaki/: envelope.json  part1.json  part2.json  part3.json  part4.json
structured_md/: BUILD  README.md
structured_md/upanishads/: BUILD
structured_md/upanishads/aitareya/: BUILD  aitareya-upanishad-rangaramanuja-01-01.md  diff_log_20251122_204620.txt
structured_md/upanishads/brihadaranyaka/: BUILD  brhadaranyaka-upanishad-rangaramanuja-03-01-01.md  brhadaranyaka-upanishad-rangaramanuja-07-01-01.md  brihadaranyaka-upanishad-rangaramanuja-03-01-01.md  brihadaranyaka-upanishad-rangaramanuja-03-03-20.md  brihadaranyaka-upanishad-rangaramanuja-03-04-15.md  brihadaranyaka-upanishad-rangaramanuja-03-05-13.md  brihadaranyaka-upanishad-rangaramanuja-04-01-01.md  brihadaranyaka-upanishad-rangaramanuja-05-01-01.md  brihadaranyaka-upanishad-rangaramanuja-05-06-01.md  brihadaranyaka-upanishad-rangaramanuja-05-09-01.md  brihadaranyaka-upanishad-rangaramanuja-06-01-01.md  brihadaranyaka-upanishad-rangaramanuja-06-03-21.md  brihadaranyaka-upanishad-rangaramanuja-06-04-20.md  brihadaranyaka-upanishad-rangaramanuja-07-01-01.md  brihadaranyaka-upanishad-rangaramanuja-08-01-01.md  brihadaranyaka-upanishad-rangaramanuja-08-03-04.md
structured_md/upanishads/chandogya/: BUILD  chandogya-upanishad-rangaramanuja-05-01-01.md  chandogya-upanishad-rangaramanuja-08-01-01.md  chhandogya-upanishad-rangaramanuja-01-01-01.md  chhandogya-upanishad-rangaramanuja-02-01-01.md  chhandogya-upanishad-rangaramanuja-03-01-01.md  chhandogya-upanishad-rangaramanuja-04-01-01.md  chhandogya-upanishad-rangaramanuja-05-01-01.md  chhandogya-upanishad-rangaramanuja-06-01-01.md  chhandogya-upanishad-rangaramanuja-07-01-01.md  chhandogya-upanishad-rangaramanuja-08-01-01.md  diff_log_20251122_164414.txt  diff_log_20251122_164927.txt  diff_log_20251122_165821.txt  diff_log_20251122_170536.txt
structured_md/upanishads/isavasya/: BUILD  isavasya-upanishad-shrivatsanarayanamunindra-01.md  isavasya-upanishad-srivatsanarayana-01.md  isavasya-upanishad-vedanta-desika-01.md  isavasya-upanishad-vedantadesika-01.md  ishavasya-upanishad-shrivatsanarayana-01.md  ishavasya-upanishad-shrivatsanarayanamunindra-01.md  ishavasya-upanishad-vedanta-desika-01.md
structured_md/upanishads/katha/: BUILD  kaThopaniSat-SaSThI-vallI.md  kaThopaniSat-caturthI-vallI.md  kaThopaniSat-dvitIyA-valla.md  kaThopaniSat-paJcamI-vallI.md  kaThopaniSat-prathamA-vallI.md  kaThopaniSat-tRtIyA-vallI.md  katha-upanishad-rangaramanuja-01-01.md  katha-upanishad-rangaramanuja-02-01.md  katha-upanishad-rangaramanuja-03-01.md  katha-upanishad-rangaramanuja-04-01.md  katha-upanishad-rangaramanuja-05-01.md  katha-upanishad-rangaramanuja-06-01.md  katha-upanishad-srirangaramanuja-02-05-01.md
structured_md/upanishads/kaushitaki/: BUILD  kaushitaki-upanishad-mula-02-01.md  kaushitaki-upanishad-rangaramanuja-01-01.md  kaushitaki-upanishad-rangaramanuja-03-01.md  (+1 more)
tools/: README.md
tools/bazel/: BUILD  grantha_converter.bzl  release.bzl  transitions.bzl
tools/lib/gemini_processor/: BUILD  BUILD.bazel  __init__.py  base_client.py  cache_manager.py  client.py  file_manager.py  prompt_manager.py  replay_client.py  response_parser.py  sampler.py  test_cache_manager.py  test_file_manager.py  test_prompt_manager.py  test_response_parser.py  test_sampler.py
tools/lib/grantha_converter/: BUILD  BUILD.bazel  DEVANAGARI_COMPARISON_DESIGN.md  MEGHAMALA_CONVERTER.md  README.md  __main__.py  analyzer.py  chunk_converter.py  cli.py  commentary_parser_test.py  devanagari_extractor.py  devanagari_repair.py  devanagari_repair_cli.py  devanagari_validator.py  diff_utils.py  envelope_generator.py  grantha_markdown_validator.py  hasher.py  hide_editor_comments.py  html_details_cli.py  html_details_to_grantha_md.py  json_to_md.py  manifest_generator.py  md_to_json.py  meghamala_chunker.py  meghamala_cli.py  meghamala_converter.py  meghamala_stitcher.py  schema_validator.py  test_cli_smoke.py  test_commentary_parser.py  test_conversion_logic.py  test_devanagari_consistency.py  test_devanagari_extractor.py  test_extraction_consistency.py  test_grantha_markdown_validator.py  test_hide_editor_comments.py  test_html_details_converter.py  test_md_to_json_conversion.py  test_meghamala_converter.py  (+3 more)
tools/lib/grantha_converter/grantha_converter_test/: test_hasher.py  test_integration.py  test_json_to_md.py
tools/lib/grantha_converter/tests/: BUILD  test_chunk_converter.py  test_meghamala_chunker.py  test_utils.py  test_validator.py
tools/scripts/: convert_existing_json_md.py  dry-run-release.sh  pdf_ocr.py  pre-commit-validate_structured_md.sh  prompt_pdf_ocr.txt  setup_json_builds.py  validate_structured_md.sh
(+234 files in other folders)
