[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "grantha-data-tools"
version = "0.0.1"
description = "A tool to convert Grantha data"
# Recommended: Create a README.md in the root directory and set this to "README.md"
readme = "tools/lib/grantha_converter/README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools]
package-dir = {"" = "tools"}

# Include all non-Python files that are part of your package (e.g., BUILD, JSON, MD, TXT, SH files)
[tool.setuptools.package-data]
"grantha_data_tools" = ["**/*.txt", "**/*.json", "**/*.md", "**/BUILD", "**/*.sh"]

[project.urls]
"Homepage" = "https://github.com/manivaradarajan/grantha-data"
"Bug Tracker" = "https://github.com/manivaradarajan/grantha-data/issues"

[project.scripts]
# IMPORTANT: All entries must be prefixed with the project name ("grantha_data_tools")
# The path is now the correct full Python import path.
grantha-converter = "grantha_data_tools.lib.grantha_converter.cli:main"
grantha-repair-devanagari = "grantha_data_tools.lib.grantha_converter.devanagari_repair_cli:main"
pdf-ocr = "grantha_data_tools.scripts.pdf_ocr:main"
convert-meghamala = "grantha_data_tools.scripts.meghamala_converter.convert_meghamala:main"