[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "grantha-data-tools"
version = "0.0.1"
description = "A tool to convert Grantha data"
readme = "tools/lib/grantha_converter/README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

# In general. only unpinned dependencies go here.
dependencies = [
    "aksharamukha",
    "colorama",
    "diff-match-patch",
    "fonttools[unicode]",
    "google-genai",
    "jsonschema",
    "pypdf",
    "pyyaml",
    "rapidfuzz",
    "rich",
    "unicodedata2",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pip-tools",
 ]

[project.urls]
"Homepage" = "https://github.com/manivaradarajan/grantha-data"
"Bug Tracker" = "https://github.com/manivaradarajan/grantha-data/issues"

[project.scripts]
grantha-converter = "grantha_converter.cli:main"
grantha-manifest = "grantha_converter.manifest_generator:main"
pdf-ocr = "scripts.pdf_ocr:main"
convert-meghamala = "scripts.meghamala_converter.convert_meghamala:main"
devanagari-diff = "scripts.devanagari_tools.devanagari_diff:main"
devanagari-repair = "scripts.devanagari_tools.devanagari_repair:main"
grantha-sync-yaml = "scripts.devanagari_tools.sync_yaml_headers:main"
